Added .gitignore and to_excel function.

--- a/DraftGrades.ipynb
+++ b/DraftGrades.ipynb
@@ -634,6 +634,7 @@
     }
    ],
    "source": [
+    "## This is an interesting way of viewing it - this should perhaps be assigned to it's own variable and included in the export too. \n",
     "cur_draft.sort_values('weighted_value', ascending=False).head(10)"
    ]
   },
@@ -1015,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1177,63 +1178,63 @@
        "      <td>19</td>\n",
        "      <td>Indianapolis</td>\n",
        "      <td>49.00</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>19</td>\n",
        "      <td>Seattle</td>\n",
        "      <td>49.00</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>21</td>\n",
        "      <td>Baltimore</td>\n",
        "      <td>47.62</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>22</td>\n",
        "      <td>Buffalo</td>\n",
        "      <td>47.00</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>23</td>\n",
        "      <td>San Francisco</td>\n",
        "      <td>46.71</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>24</td>\n",
        "      <td>Houston</td>\n",
        "      <td>46.25</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>25</td>\n",
        "      <td>Denver</td>\n",
        "      <td>44.50</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>26</td>\n",
        "      <td>Detroit</td>\n",
        "      <td>44.33</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>27</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>44.29</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -1294,15 +1295,15 @@
        "15             16          Arizona           51.17  Acquired 2+ Starters\n",
        "16             17  Los Angeles (N)           50.86  Acquired 2+ Starters\n",
        "17             18        Las Vegas           50.60  Acquired 2+ Starters\n",
-       "18             19     Indianapolis           49.00               Unknown\n",
-       "19             19          Seattle           49.00               Unknown\n",
-       "20             21        Baltimore           47.62               Unknown\n",
-       "21             22          Buffalo           47.00               Unknown\n",
-       "22             23    San Francisco           46.71               Unknown\n",
-       "23             24          Houston           46.25               Unknown\n",
-       "24             25           Denver           44.50               Unknown\n",
-       "25             26          Detroit           44.33               Unknown\n",
-       "26             27        Cleveland           44.29               Unknown\n",
+       "18             19     Indianapolis           49.00       As Expected/Mid\n",
+       "19             19          Seattle           49.00       As Expected/Mid\n",
+       "20             21        Baltimore           47.62       As Expected/Mid\n",
+       "21             22          Buffalo           47.00       As Expected/Mid\n",
+       "22             23    San Francisco           46.71       As Expected/Mid\n",
+       "23             24          Houston           46.25       As Expected/Mid\n",
+       "24             25           Denver           44.50       As Expected/Mid\n",
+       "25             26          Detroit           44.33       As Expected/Mid\n",
+       "26             27        Cleveland           44.29       As Expected/Mid\n",
        "27             28        Tennessee           42.75    Had Several Misses\n",
        "28             29          Chicago           40.83    Had Several Misses\n",
        "29             30     New York (A)           40.60    Had Several Misses\n",
@@ -1310,52 +1311,54 @@
        "31             32     New York (N)           36.75    Had Several Misses"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Group by 'Drafted_By' and calculate the mean of 'weighted_value'\n",
-    "weighted_df = cur_draft.groupby('Drafted_By', as_index=False)['weighted_value'].mean().round(2)\n",
+    "weighted_df_raw = cur_draft.groupby('Drafted_By', as_index=False)['weighted_value'].mean().round(2)\n",
     "\n",
     "# Rename the 'difference_BPA' column to 'bpa' to reflect the calculated average\n",
-    "weighted_df.rename(columns={'weighted_average': 'weighted_value'}, inplace=True)\n",
+    "weighted_df_raw.rename(columns={'weighted_average': 'weighted_value'}, inplace=True)\n",
     "\n",
     "# Sort the DataFrame by the 'bpa' column in descending order\n",
-    "weighted_df = weighted_df.sort_values(by='weighted_value', ascending=False)\n",
+    "weighted_df_raw = weighted_df_raw.sort_values(by='weighted_value', ascending=False)\n",
     "\n",
     "# Add a rank column based on the sorted 'bpa' values\n",
-    "weighted_df['weighted_rank'] = weighted_df['weighted_value'].rank(ascending=False, method='min').astype(int)\n",
+    "weighted_df_raw['weighted_rank'] = weighted_df_raw['weighted_value'].rank(ascending=False, method='min').astype(int)\n",
     "\n",
     "# Define the conditions for the 'verdict' column\n",
     "conditions = [\n",
-    "    (weighted_df['weighted_value'] >= 50),\n",
-    "    (weighted_df['weighted_value'] <= 43)\n",
+    "    (weighted_df_raw['weighted_value'] >= 50),\n",
+    "    (weighted_df_raw['weighted_value'] <= 49.9) & (weighted_df_raw['weighted_value'] >= 44),\n",
+    "    (weighted_df_raw['weighted_value'] < 44)\n",
     "]\n",
     "\n",
     "# Define the corresponding verdicts\n",
     "verdicts = [\n",
     "    'Acquired 2+ Starters',\n",
+    "    'As Expected/Mid',\n",
     "    'Had Several Misses',\n",
     "]\n",
     "\n",
     "# Add the 'verdict' column to the DataFrame\n",
-    "weighted_df['verdict'] = np.select(conditions, verdicts, default='Unknown')\n",
+    "weighted_df_raw['verdict'] = np.select(conditions, verdicts, default='Unknown')\n",
     "\n",
     "# Reorder columns to have 'rank' as the first column\n",
-    "weighted_df = weighted_df[['weighted_rank', 'Drafted_By', 'weighted_value', 'verdict']]\n",
+    "weighted_df_raw = weighted_df_raw[['weighted_rank', 'Drafted_By', 'weighted_value', 'verdict']]\n",
     "\n",
     "# Reset the index of the DataFrame\n",
-    "weighted_df.reset_index(drop=True, inplace=True)\n",
+    "weighted_df_raw.reset_index(drop=True, inplace=True)\n",
     "\n",
     "# Display the final DataFrame\n",
-    "weighted_df"
+    "weighted_df_raw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1540,7 @@
        "      <td>19</td>\n",
        "      <td>Seattle</td>\n",
        "      <td>49.00</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -1545,7 +1548,7 @@
        "      <td>19</td>\n",
        "      <td>Indianapolis</td>\n",
        "      <td>49.00</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -1553,7 +1556,7 @@
        "      <td>21</td>\n",
        "      <td>Baltimore</td>\n",
        "      <td>47.62</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -1561,7 +1564,7 @@
        "      <td>22</td>\n",
        "      <td>Buffalo</td>\n",
        "      <td>47.00</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -1569,7 +1572,7 @@
        "      <td>23</td>\n",
        "      <td>San Francisco</td>\n",
        "      <td>46.71</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -1577,7 +1580,7 @@
        "      <td>24</td>\n",
        "      <td>Houston</td>\n",
        "      <td>46.25</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -1585,7 +1588,7 @@
        "      <td>25</td>\n",
        "      <td>Denver</td>\n",
        "      <td>44.50</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -1593,7 +1596,7 @@
        "      <td>26</td>\n",
        "      <td>Detroit</td>\n",
        "      <td>44.33</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -1601,7 +1604,7 @@
        "      <td>27</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>44.29</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -1701,15 +1704,15 @@
        "15  Acquired 2+ Starters  \n",
        "16  Acquired 2+ Starters  \n",
        "17  Acquired 2+ Starters  \n",
-       "18               Unknown  \n",
-       "19               Unknown  \n",
-       "20               Unknown  \n",
-       "21               Unknown  \n",
-       "22               Unknown  \n",
-       "23               Unknown  \n",
-       "24               Unknown  \n",
-       "25               Unknown  \n",
-       "26               Unknown  \n",
+       "18       As Expected/Mid  \n",
+       "19       As Expected/Mid  \n",
+       "20       As Expected/Mid  \n",
+       "21       As Expected/Mid  \n",
+       "22       As Expected/Mid  \n",
+       "23       As Expected/Mid  \n",
+       "24       As Expected/Mid  \n",
+       "25       As Expected/Mid  \n",
+       "26       As Expected/Mid  \n",
        "27    Had Several Misses  \n",
        "28    Had Several Misses  \n",
        "29    Had Several Misses  \n",
@@ -1717,34 +1720,34 @@
        "31    Had Several Misses  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Merge bpa_df with weighted_df on the 'Drafted_By' column\n",
-    "combined_df = pd.merge(bpa_df[['Drafted_By', 'bpa_rank']], weighted_df, on='Drafted_By', how='left')\n",
+    "weighted_rank = pd.merge(bpa_df[['Drafted_By', 'bpa_rank']], weighted_df_raw, on='Drafted_By', how='left')\n",
     "\n",
     "# Rename the 'rank' column from bpa_df to 'bpa_rank' to avoid confusion\n",
     "# combined_df.rename(columns={'rank': 'bpa_rank'}, inplace=True)\n",
     "\n",
     "# Reorder columns to have 'bpa_rank' as the first column\n",
-    "combined_df = combined_df[['bpa_rank', 'weighted_rank', 'Drafted_By', 'weighted_value', 'verdict']]\n",
+    "weighted_rank = weighted_rank[['bpa_rank', 'weighted_rank', 'Drafted_By', 'weighted_value', 'verdict']]\n",
     "\n",
     "# Sort the DataFrame by the 'weighted_rank' column in ascending order\n",
-    "combined_df = combined_df.sort_values(by='weighted_rank', ascending=True)\n",
+    "weighted_rank = weighted_rank.sort_values(by='weighted_rank', ascending=True)\n",
     "\n",
     "# Reset the index again after sorting, if desired\n",
-    "combined_df.reset_index(drop=True, inplace=True)\n",
+    "weighted_rank.reset_index(drop=True, inplace=True)\n",
     "\n",
     "# Display the final sorted DataFrame\n",
-    "combined_df"
+    "weighted_rank"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1832,7 @@
        "7     overall           2.51"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,9 +1880,16 @@
     "\n",
     "# Example usage with your DataFrames\n",
     "save_dfs_to_excel(bpa_df=bpa_df, \n",
-    "                  combined_df=combined_df, \n",
+    "                  weighted_rank=weighted_rank, \n",
     "                  draft_quality=draft_quality)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
