added top_20 to export sheet

--- a/DraftGrades.ipynb
+++ b/DraftGrades.ipynb
@@ -386,261 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Player_ID</th>\n",
-       "      <th>First_Name</th>\n",
-       "      <th>Last_Name</th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Drafted_By</th>\n",
-       "      <th>Draft_Round</th>\n",
-       "      <th>Drafted_Position</th>\n",
-       "      <th>Draft_Year</th>\n",
-       "      <th>Future_Overall</th>\n",
-       "      <th>expected_FV</th>\n",
-       "      <th>difference_BPA</th>\n",
-       "      <th>pos_avg</th>\n",
-       "      <th>weighted_value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>42863</td>\n",
-       "      <td>Jessie</td>\n",
-       "      <td>Winters</td>\n",
-       "      <td>NT</td>\n",
-       "      <td>Jacksonville</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>86</td>\n",
-       "      <td>64</td>\n",
-       "      <td>22</td>\n",
-       "      <td>65</td>\n",
-       "      <td>113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>42796</td>\n",
-       "      <td>Nate</td>\n",
-       "      <td>Wilcox</td>\n",
-       "      <td>RDT</td>\n",
-       "      <td>Dallas</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>76</td>\n",
-       "      <td>56</td>\n",
-       "      <td>20</td>\n",
-       "      <td>54</td>\n",
-       "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>42565</td>\n",
-       "      <td>Nickolas</td>\n",
-       "      <td>Cortez</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>Indianapolis</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>75</td>\n",
-       "      <td>66</td>\n",
-       "      <td>9</td>\n",
-       "      <td>53</td>\n",
-       "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>42995</td>\n",
-       "      <td>O.J.</td>\n",
-       "      <td>Ingram</td>\n",
-       "      <td>LCB</td>\n",
-       "      <td>Minnesota</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>72</td>\n",
-       "      <td>53</td>\n",
-       "      <td>19</td>\n",
-       "      <td>50</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>42614</td>\n",
-       "      <td>Courtney</td>\n",
-       "      <td>Schultz</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>Minnesota</td>\n",
-       "      <td>4</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>73</td>\n",
-       "      <td>42</td>\n",
-       "      <td>31</td>\n",
-       "      <td>52</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>42619</td>\n",
-       "      <td>Kerry</td>\n",
-       "      <td>Craig</td>\n",
-       "      <td>RG</td>\n",
-       "      <td>Kansas City</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>84</td>\n",
-       "      <td>64</td>\n",
-       "      <td>20</td>\n",
-       "      <td>71</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>42387</td>\n",
-       "      <td>Daniel</td>\n",
-       "      <td>Lane</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>Pittsburgh</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>76</td>\n",
-       "      <td>66</td>\n",
-       "      <td>10</td>\n",
-       "      <td>59</td>\n",
-       "      <td>97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>42388</td>\n",
-       "      <td>Chance</td>\n",
-       "      <td>Witkop</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>Cincinnati</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>69</td>\n",
-       "      <td>66</td>\n",
-       "      <td>3</td>\n",
-       "      <td>50</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>42374</td>\n",
-       "      <td>Ross</td>\n",
-       "      <td>Anthony</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>Philadelphia</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>69</td>\n",
-       "      <td>63</td>\n",
-       "      <td>6</td>\n",
-       "      <td>50</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>42691</td>\n",
-       "      <td>Floyd</td>\n",
-       "      <td>Heskew</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>Pittsburgh</td>\n",
-       "      <td>6</td>\n",
-       "      <td>25</td>\n",
-       "      <td>2063</td>\n",
-       "      <td>64</td>\n",
-       "      <td>38</td>\n",
-       "      <td>26</td>\n",
-       "      <td>43</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Player_ID First_Name Last_Name Position    Drafted_By  Draft_Round  \\\n",
-       "144      42863     Jessie   Winters       NT  Jacksonville            1   \n",
-       "117      42796       Nate    Wilcox      RDT        Dallas            2   \n",
-       "65       42565   Nickolas    Cortez       SE  Indianapolis            1   \n",
-       "186      42995       O.J.    Ingram      LCB     Minnesota            2   \n",
-       "77       42614   Courtney   Schultz       LG     Minnesota            4   \n",
-       "78       42619      Kerry     Craig       RG   Kansas City            1   \n",
-       "27       42387     Daniel      Lane       FL    Pittsburgh            1   \n",
-       "28       42388     Chance    Witkop       RB    Cincinnati            1   \n",
-       "20       42374       Ross   Anthony       RB  Philadelphia            1   \n",
-       "97       42691      Floyd    Heskew       RT    Pittsburgh            6   \n",
-       "\n",
-       "     Drafted_Position  Draft_Year  Future_Overall  expected_FV  \\\n",
-       "144                18        2063              86           64   \n",
-       "117                14        2063              76           56   \n",
-       "65                  2        2063              75           66   \n",
-       "186                 7        2063              72           53   \n",
-       "77                 17        2063              73           42   \n",
-       "78                 11        2063              84           64   \n",
-       "27                  3        2063              76           66   \n",
-       "28                 12        2063              69           66   \n",
-       "20                  8        2063              69           63   \n",
-       "97                 25        2063              64           38   \n",
-       "\n",
-       "     difference_BPA  pos_avg  weighted_value  \n",
-       "144              22       65             113  \n",
-       "117              20       54             106  \n",
-       "65                9       53             106  \n",
-       "186              19       50             103  \n",
-       "77               31       52             102  \n",
-       "78               20       71              99  \n",
-       "27               10       59              97  \n",
-       "28                3       50              95  \n",
-       "20                6       50              95  \n",
-       "97               26       43              95  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## This is an interesting way of viewing it - this should perhaps be assigned to it's own variable and included in the export too. \n",
-    "cur_draft.sort_values('weighted_value', ascending=False).head(10)"
+    "top_20 = cur_draft.sort_values('weighted_value', ascending=False).head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +725,7 @@
        "31  Missed on picks or prioritised other things ov...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1067,7 @@
        "31             32     New York (N)           36.75    Had Several Misses"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1476,7 @@
        "31    Had Several Misses  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1588,7 @@
        "7     overall           2.51"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1863,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1636,8 @@
     "\n",
     "# Example usage with your DataFrames\n",
     "save_dfs_to_excel(bpa_df=bpa_df, \n",
-    "                  weighted_rank=weighted_rank, \n",
+    "                  weighted_rank=weighted_rank,\n",
+    "                  top_20=top_20, \n",
     "                  draft_quality=draft_quality)"
    ]
   },
