--- a/DraftGrades.ipynb
+++ b/DraftGrades.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,18 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the weighted value and apply floor operation\n",
     "cur_draft['weighted_value'] = np.floor(cur_draft['Future_Overall'] * \n",
-    "                                       (cur_draft['Future_Overall'] / cur_draft['pos_avg'])).astype(int)\n"
+    "                                       (cur_draft['Future_Overall'] / cur_draft['pos_avg'])).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -452,14 +452,14 @@
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>New England</td>\n",
-       "      <td>8.75</td>\n",
+       "      <td>9.25</td>\n",
        "      <td>Did well for BPA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Atlanta</td>\n",
-       "      <td>8.67</td>\n",
+       "      <td>8.33</td>\n",
        "      <td>Did well for BPA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -634,8 +634,8 @@
        "      <th>29</th>\n",
        "      <td>30</td>\n",
        "      <td>Miami</td>\n",
-       "      <td>-2.00</td>\n",
-       "      <td>Drafted as expected</td>\n",
+       "      <td>-2.17</td>\n",
+       "      <td>Missed on picks or prioritised other things ov...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -660,8 +660,8 @@
        "0          1        Tampa Bay  11.83   \n",
        "1          2       Pittsburgh   9.57   \n",
        "2          3        Minnesota   9.33   \n",
-       "3          4      New England   8.75   \n",
-       "4          5          Atlanta   8.67   \n",
+       "3          4      New England   9.25   \n",
+       "4          5          Atlanta   8.33   \n",
        "5          6      New Orleans   6.67   \n",
        "6          7      Kansas City   6.43   \n",
        "7          8       Washington   6.00   \n",
@@ -686,7 +686,7 @@
        "26        27        Tennessee  -1.25   \n",
        "27        28          Buffalo  -1.33   \n",
        "28        29          Houston  -1.88   \n",
-       "29        30            Miami  -2.00   \n",
+       "29        30            Miami  -2.17   \n",
        "30        31          Detroit  -2.67   \n",
        "31        32     New York (N)  -5.50   \n",
        "\n",
@@ -720,12 +720,12 @@
        "26                                Drafted as expected  \n",
        "27                                Drafted as expected  \n",
        "28                                Drafted as expected  \n",
-       "29                                Drafted as expected  \n",
+       "29  Missed on picks or prioritised other things ov...  \n",
        "30  Missed on picks or prioritised other things ov...  \n",
        "31  Missed on picks or prioritised other things ov...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "      <th>8</th>\n",
        "      <td>9</td>\n",
        "      <td>New England</td>\n",
-       "      <td>58.75</td>\n",
+       "      <td>59.75</td>\n",
        "      <td>Acquired 2+ Starters</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -932,14 +932,14 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>19</td>\n",
-       "      <td>Indianapolis</td>\n",
+       "      <td>Seattle</td>\n",
        "      <td>49.00</td>\n",
        "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>19</td>\n",
-       "      <td>Seattle</td>\n",
+       "      <td>Indianapolis</td>\n",
        "      <td>49.00</td>\n",
        "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
@@ -1017,7 +1017,7 @@
        "      <th>30</th>\n",
        "      <td>31</td>\n",
        "      <td>Miami</td>\n",
-       "      <td>39.00</td>\n",
+       "      <td>38.50</td>\n",
        "      <td>Had Several Misses</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1041,7 +1041,7 @@
        "5               6      New Orleans           61.67  Acquired 2+ Starters\n",
        "6               7           Dallas           61.11  Acquired 2+ Starters\n",
        "7               8      Kansas City           60.14  Acquired 2+ Starters\n",
-       "8               9      New England           58.75  Acquired 2+ Starters\n",
+       "8               9      New England           59.75  Acquired 2+ Starters\n",
        "9              10     Jacksonville           54.67  Acquired 2+ Starters\n",
        "10             11        Green Bay           53.50  Acquired 2+ Starters\n",
        "11             12       Washington           52.86  Acquired 2+ Starters\n",
@@ -1051,8 +1051,8 @@
        "15             16          Arizona           51.17  Acquired 2+ Starters\n",
        "16             17  Los Angeles (N)           50.86  Acquired 2+ Starters\n",
        "17             18        Las Vegas           50.60  Acquired 2+ Starters\n",
-       "18             19     Indianapolis           49.00       As Expected/Mid\n",
-       "19             19          Seattle           49.00       As Expected/Mid\n",
+       "18             19          Seattle           49.00       As Expected/Mid\n",
+       "19             19     Indianapolis           49.00       As Expected/Mid\n",
        "20             21        Baltimore           47.62       As Expected/Mid\n",
        "21             22          Buffalo           47.00       As Expected/Mid\n",
        "22             23    San Francisco           46.71       As Expected/Mid\n",
@@ -1063,11 +1063,11 @@
        "27             28        Tennessee           42.75    Had Several Misses\n",
        "28             29          Chicago           40.83    Had Several Misses\n",
        "29             30     New York (A)           40.60    Had Several Misses\n",
-       "30             31            Miami           39.00    Had Several Misses\n",
+       "30             31            Miami           38.50    Had Several Misses\n",
        "31             32     New York (N)           36.75    Had Several Misses"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
        "      <td>4</td>\n",
        "      <td>9</td>\n",
        "      <td>New England</td>\n",
-       "      <td>58.75</td>\n",
+       "      <td>59.75</td>\n",
        "      <td>Acquired 2+ Starters</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1292,17 +1292,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>9</td>\n",
+       "      <td>25</td>\n",
        "      <td>19</td>\n",
-       "      <td>Seattle</td>\n",
+       "      <td>Indianapolis</td>\n",
        "      <td>49.00</td>\n",
        "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>25</td>\n",
+       "      <td>9</td>\n",
        "      <td>19</td>\n",
-       "      <td>Indianapolis</td>\n",
+       "      <td>Seattle</td>\n",
        "      <td>49.00</td>\n",
        "      <td>As Expected/Mid</td>\n",
        "    </tr>\n",
@@ -1391,7 +1391,7 @@
        "      <td>30</td>\n",
        "      <td>31</td>\n",
        "      <td>Miami</td>\n",
-       "      <td>39.00</td>\n",
+       "      <td>38.50</td>\n",
        "      <td>Had Several Misses</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1416,7 +1416,7 @@
        "5          6              6      New Orleans           61.67   \n",
        "6         11              7           Dallas           61.11   \n",
        "7          7              8      Kansas City           60.14   \n",
-       "8          4              9      New England           58.75   \n",
+       "8          4              9      New England           59.75   \n",
        "9         19             10     Jacksonville           54.67   \n",
        "10        12             11        Green Bay           53.50   \n",
        "11         8             12       Washington           52.86   \n",
@@ -1426,8 +1426,8 @@
        "15        17             16          Arizona           51.17   \n",
        "16        14             17  Los Angeles (N)           50.86   \n",
        "17        18             18        Las Vegas           50.60   \n",
-       "18         9             19          Seattle           49.00   \n",
-       "19        25             19     Indianapolis           49.00   \n",
+       "18        25             19     Indianapolis           49.00   \n",
+       "19         9             19          Seattle           49.00   \n",
        "20        21             21        Baltimore           47.62   \n",
        "21        28             22          Buffalo           47.00   \n",
        "22        20             23    San Francisco           46.71   \n",
@@ -1438,7 +1438,7 @@
        "27        27             28        Tennessee           42.75   \n",
        "28        23             29          Chicago           40.83   \n",
        "29        16             30     New York (A)           40.60   \n",
-       "30        30             31            Miami           39.00   \n",
+       "30        30             31            Miami           38.50   \n",
        "31        32             32     New York (N)           36.75   \n",
        "\n",
        "                 verdict  \n",
@@ -1476,7 +1476,7 @@
        "31    Had Several Misses  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>1.48</td>\n",
+       "      <td>1.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1560,7 +1560,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6</td>\n",
-       "      <td>2.58</td>\n",
+       "      <td>2.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1580,15 +1580,15 @@
        "  Draft_Round  average value\n",
        "0           1           3.75\n",
        "1           2           5.12\n",
-       "2           3           1.48\n",
+       "2           3           1.52\n",
        "3           4           2.97\n",
        "4           5           0.60\n",
-       "5           6           2.58\n",
+       "5           6           2.55\n",
        "6           7           0.87\n",
        "7     overall           2.51"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
